syntax = "proto3";

package zilean_rust;
option csharp_namespace = "Zilean.Proto.RustServer";

service ZileanRustServer {
  rpc IngestImdb (IngestImdbRequest) returns (IngestImdbResponse);
  rpc SearchImdb (SearchImdbRequest) returns (SearchImdbResponse);
  rpc ParseTorrentTitles (stream TorrentTitleRequest) returns (stream TorrentTitleResponse);
  rpc Shutdown (ShutdownRequest) returns (ShutdownResponse);
}

message SearchImdbRequest {
  string title = 1;
  string category = 2;
  int32 year = 3;
}

message Match {
  string imdb_id = 1;
  string title = 2;
  int32 year = 3;
  float score = 4;
}

message SearchImdbResponse {
  repeated Match matches = 1;
}

message IngestImdbRequest {
  bool force_download = 1;
  bool force_index = 2;
}

message IngestImdbResponse {}

enum Codec {
  UNKNOWN = 0;
  AVC = 1;
  HEVC = 2;
  XVID = 3;
  MPEG = 4;
  AV1 = 5;
}

enum Quality {
  QUALITY_UNKNOWN = 0;
  TELE_SYNC = 1;
  TELE_CINE = 2;
  SCR = 3;
  BLURAY = 4;
  BLURAY_REMUX = 5;
  REMUX = 6;
  UHDRIP = 7;
  HDRIP = 8;
  BRRIP = 9;
  BDRIP = 10;
  DVDRIP = 11;
  VHSRIP = 12;
  DVD = 13;
  VHS = 14;
  PPVRIP = 15;
  HDTVRIP = 16;
  HDTV = 17;
  SATRIP = 18;
  TVRIP = 19;
  R5 = 20;
  WEBMUX = 21;
  WEBRIP = 22;
  WEBDL = 23;
  WEBDLRIP = 24;
  WEB = 25;
  CAM = 26;
  PDTV = 27;
}

enum Language {
  LANG_UNKNOWN = 0;
  ENGLISH = 1;
  ITALIAN = 2;
  FRENCH = 3;
  SPANISH = 4;
  LATIN_AMERICAN_SPANISH = 5;
  GERMAN = 6;
  PORTUGUESE = 7;
  JAPANESE = 8;
  KOREAN = 9;
  CHINESE = 10;
  RUSSIAN = 11;
  UKRAINIAN = 12;
  GREEK = 13;
  LITHUANIAN = 14;
  LATVIAN = 15;
  ESTONIAN = 16;
  POLISH = 17;
  CZECH = 18;
  SLOVAK = 19;
  HUNGARIAN = 20;
  ROMANIAN = 21;
  BULGARIAN = 22;
  CROATIAN = 23;
  SERBIAN = 24;
  SLOVENIAN = 25;
  DUTCH = 26;
  DANISH = 27;
  FINNISH = 28;
  NORWEGIAN = 29;
  SWEDISH = 30;
  TURKISH = 31;
  ARABIC = 32;
  INDONESIAN = 33;
  VIETNAMESE = 34;
  THAI = 35;
  MALAY = 36;
  HEBREW = 37;
  PERSIAN = 38;
  HINDI = 39;
  TELUGU = 40;
  TAMIL = 41;
  MALAYALAM = 42;
  KANNADA = 43;
  MARATHI = 44;
  GUJARATI = 45;
  BENGALI = 46;
  PUNJABI = 47;
}

enum Network {
  NETWORK_UNKNOWN = 0;
  APPLE_TV = 1;
  AMAZON = 2;
  NETFLIX = 3;
  HBO = 4;
  DISNEY = 5;
  NICKELODEON = 6;
  HULU = 7;
  CBS = 8;
  NBC = 9;
  AMC = 10;
  PBS = 11;
  CRUNCHYROLL = 12;
  VICE = 13;
  SONY = 14;
  HALLMARK = 15;
  ADULT_SWIM = 16;
  ANIMAL_PLANET = 17;
}

message TorrentTitleRequest {
  string info_hash = 1;
  string title = 2;
}

message TorrentTitleResponse {
  string info_hash = 1;
  string original_title = 2;
  string title = 3;
  optional string resolution = 4;
  optional string date = 5;
  optional int32 year = 6;
  bool ppv = 7;
  bool trash = 8;
  bool adult = 9;
  optional string edition = 10;
  bool extended = 11;
  bool convert = 12;
  bool hardcoded = 13;
  bool proper = 14;
  bool repack = 15;
  bool retail = 16;
  bool remastered = 17;
  bool unrated = 18;
  optional string region = 19;
  optional Quality quality = 20;
  optional string bitrate = 21;
  optional string bit_depth = 22;
  repeated string hdr = 23;
  optional Codec codec = 24;
  repeated string audio = 25;
  repeated string channels = 26;
  optional string group = 27;
  optional string container = 28;
  repeated int32 volumes = 29;
  repeated int32 seasons = 30;
  repeated int32 episodes = 31;
  optional string episode_code = 32;
  bool complete = 33;
  repeated Language languages = 34;
  bool dubbed = 35;
  optional string site = 36;
  optional string extension = 37;
  bool subbed = 38;
  bool documentary = 39;
  bool upscaled = 40;
  bool is_3d = 41;
  repeated string extras = 42;
  optional string size = 43;
  optional Network network = 44;
  bool scene = 45;
}

message ShutdownRequest {}
message ShutdownResponse {}